--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
   "files.associations": {
     "*.yml": "dockercompose",
-    "iostream": "cpp"
-  }
+    "iostream": "cpp",
+    "queue": "cpp",
+    "stack": "cpp",
+    "random": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
